# TOR

./: CMakeLists.txt  LICENSE  README.md
include/filters/: dror-e.hh  tor-e.hh  tor.hh
include/methods/: eva.hh  ewm.hh  point.hh  preprocessing.hh  timer.hh
scripts/: dirs.sh  evaluation.sh
src/: eva.cc  timer.cc
src/filters/: ewm.cc  tor.cc
